ingress/ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main # <-- This is your ingress name. It can be anything you want.
spec:
  ingressClassName: haproxy
  rules:
  - host: YOUR-ENDPOINT.hare-xgl.nrp-nautilus.io # <-- Change the endpoint.
    http:
      paths:
      - backend:
          service:
            name: <your-name>-svc # <-- Change this to the service name you want to use. It must match EXACTLY.
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts: # <-- List out all your endpoints under this section
    - YOUR-ENDPOINT.hare-xgl.nrp-nautilus.io # <-- Change the endpoint.
---
apiVersion: v1
kind: Service
metadata:
  name: <your-name>-svc # <-- This is your service name. It can be anything you want.
  labels:
    app: <your-name>-svc # <-- Also your service name, make it the same as the one you chose above.
spec:
  selector:
    app: <your-name>-xgl  # <-- Change this to your pods' labels. It must match EXACTLY.
              # (e.g., if your pod has a prefix of "main-xgl", your selector would select for "main-xgl")
  ports:
  - name: http
    protocol: TCP
    port: 8080
