ingress/xgl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xgl-main
spec:
  ingressClassName: haproxy
  rules:
  - host: autoslug.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-main
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: autoslug-alt1.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-alt1
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: autoslug-alt2.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-alt2
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: autoslug-alt3.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-alt3
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  - host: autoslug-alt4.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: xgl-alt4
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - autoslug.nrp-nautilus.io
    - autoslug-alt1.nrp-nautilus.io
    - autoslug-alt2.nrp-nautilus.io
    - autoslug-alt3.nrp-nautilus.io
    - autoslug-alt4.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-main
  labels:
    app: xgl-main
spec:
  selector:
    app: xgl-main # match deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-alt1
  labels:
    app: xgl-alt1
spec:
  selector:
    app: xgl-alt1 # match deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-alt2
  labels:
    app: xgl-alt2
spec:
  selector:
    app: xgl-alt2 # match deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-alt3
  labels:
    app: xgl-alt3
spec:
  selector:
    app: xgl-alt3 # match deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xgl-alt4
  labels:
    app: xgl-alt4
spec:
  selector:
    app: xgl-alt4 # match deployment labels
  ports:
  - name: http
    protocol: TCP
    port: 8080
